src/objects/Screening__c.object
<CustomObject>
    <fields>
        <fullName>Scabies_Outcome__c</fullName>
        <description>Outcome of last Scabies exposure</description>
        <label>Scabies Outcome</label>
        <picklist>
            <picklistValues>
                <fullName>Treated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Treated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Screening_Advocate__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Name of Advocate who completes Shelter Screening</description>
        <inlineHelpText>Name of Advocate who completes Shelter Screening</inlineHelpText>
        <label>Screening Advocate</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Screenings (Screening Advocate)</relationshipLabel>
        <relationshipName>Screenings1</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Screening_Call_Origin__c</fullName>
        <description>Indicates whether the call was transferred from CAP, or if the call came directly to Shelter</description>
        <label>Screening Call Origin</label>
        <picklist>
            <picklistValues>
                <fullName>Transferred from Helpline</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct to Shelter</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Screening_Date__c</fullName>
        <label>Screening Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Screening_Status__c</fullName>
        <description>Accepted = Accepted into Shelter pending arrival.  Pending = Their screening is complete but you want to consult a colleague.  Not Completed = Screening needs to be completed. Denied = Their screening was denied.  Accepted No Show = They were accepted but did not show up to Shelter.</description>
        <inlineHelpText>Accepted = Accepted into Shelter pending arrival.  Pending = Their screening is complete but you want to consult a colleague.  Not Completed = Screening needs to be completed. Denied = Their screening was denied.  Accepted No Show = They were accepted but</inlineHelpText>
        <label>Screening Status</label>
        <picklist>
            <picklistValues>
                <fullName>To Be Completed</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accepted - No Show</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denied</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Screening_Time__c</fullName>
        <description>Time of Screening.</description>
        <inlineHelpText>Time of Screening.</inlineHelpText>
        <label>Screening Time</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Specific_Shelter_Accommodation_Needs__c</fullName>
        <label>Specific Shelter Accommodation/Needs</label>
        <picklist>
            <picklistValues>
                <fullName>No Accommodation Needs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Animal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Teenage Male Accomodation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refrigerated Medicine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sharps Container</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Schedule Accomodation</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Specify_Shelter_Accommodation_Needs_Oth__c</fullName>
        <description>Give more detail about their needs, including if you select &quot;Other&quot;.</description>
        <inlineHelpText>Give more detail about their needs, including if you select &quot;Other&quot;.</inlineHelpText>
        <label>Please Specify Accomodation/Needs</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Threats_Description__c</fullName>
        <description>Text that explains the DV history of threats</description>
        <label>Threats Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Total_Number_of_Children_in_HH__c</fullName>
        <description>Total number of children that the caller has.  This is not just the number of children who are coming to shelter.</description>
        <inlineHelpText>Total number of children that the caller has.  This is not just the number of children who are coming to shelter.</inlineHelpText>
        <label>Total # of Children in Household</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_of_Children_Coming_to_Shelter__c</fullName>
        <label>Total # of Children Coming to Shelter</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tuberculosis_Outcome__c</fullName>
        <description>Outcome of last TB exposure</description>
        <label>Tuberculosis Outcome</label>
        <picklist>
            <picklistValues>
                <fullName>Treated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Treated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Unwanted_Sexual_Behavior_Description_c__c</fullName>
        <description>Text that explains DV history of unwanted sexual behavior or acts</description>
        <label>Unwanted Sexual Behavior Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Vehicle_Driven_to_Shelter__c</fullName>
        <inlineHelpText>Will the caller be driving her vehicle to Shelter?</inlineHelpText>
        <label>Vehicle Driven to Shelter</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Vehicle_Registered_To__c</fullName>
        <description>Name of person the vehicle is registered to</description>
        <inlineHelpText>Enter the name of the person the car Caller is driving to shelter is registered to.</inlineHelpText>
        <label>Vehicle Registered To:</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Weapons_Description_c__c</fullName>
        <description>Text that explains DV history of weapon use or talk</description>
        <label>Weapons Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>When_Living_at_Last_Permanent_Address__c</fullName>
        <description>How long ago the caller was living at their last permanent address. To determine if they are chronically homeless.</description>
        <inlineHelpText>How long ago the caller was living at their last permanent address. To determine if they are chronically homeless.</inlineHelpText>
        <label>When Living at Last Permanent Address</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>Screening</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Shelter_Screenings</fullName>
        <columns>NAME</columns>
        <columns>Screening_Date__c</columns>
        <columns>Screening_Status__c</columns>
        <columns>Participant__c</columns>
        <columns>Total_of_Children_Coming_to_Shelter__c</columns>
        <columns>Screening_Advocate__c</columns>
        <columns>Screening_Call_Origin__c</columns>
        <columns>Reason_for_Calling_NB_Today__c</columns>
        <columns>Last_Permanent_Address_City__c</columns>
        <columns>Brief_History_of_DV__c</columns>
        <columns>Safe_Phone_Number_at_Screening__c</columns>
        <columns>Specific_Shelter_Accommodation_Needs__c</columns>
        <columns>Reason_For_Denial__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Screening__c.Shelter</value>
        </filters>
        <label>All Shelter Screenings</label>
    </listViews>
    <listViews>
        <fullName>Shelter_Awaiting_Arrival</fullName>
        <columns>Participant__c</columns>
        <columns>NAME</columns>
        <columns>Total_of_Children_Coming_to_Shelter__c</columns>
        <columns>Screening_Date__c</columns>
        <columns>Expected_Arrival_Date__c</columns>
        <columns>Caller_s_Last_Check_In__c</columns>
        <columns>Safe_Phone_Number_at_Screening__c</columns>
        <columns>Phone_Safety_Notes__c</columns>
        <columns>Safety_Plan_until_Arrival__c</columns>
        <columns>Pickup_Spot_Given_to_Caller__c</columns>
        <columns>Vehicle_Driven_to_Shelter__c</columns>
        <columns>Screening_Advocate__c</columns>
        <columns>Screening_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Screening_Status__c</field>
            <operation>equals</operation>
            <value>Accepted</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Screening__c.Shelter</value>
        </filters>
        <label>Shelter - Accepted</label>
    </listViews>
    <listViews>
        <fullName>Shelter_Denied</fullName>
        <columns>Participant__c</columns>
        <columns>Total_of_Children_Coming_to_Shelter__c</columns>
        <columns>Screening_Date__c</columns>
        <columns>Screening_Status__c</columns>
        <columns>Reason_For_Denial__c</columns>
        <columns>Reason_for_Denial_Explaination__c</columns>
        <columns>Referred_Caller_To__c</columns>
        <columns>Screening_Advocate__c</columns>
        <columns>NAME</columns>
        <columns>Safe_Phone_Number_at_Screening__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Screening_Status__c</field>
            <operation>equals</operation>
            <value>Denied</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Screening__c.Shelter</value>
        </filters>
        <label>Shelter - Denied</label>
    </listViews>
    <listViews>
        <fullName>Shelter_Incomplete_Screenings</fullName>
        <columns>Screening_Status__c</columns>
        <columns>Participant__c</columns>
        <columns>Screening_Date__c</columns>
        <columns>NAME</columns>
        <columns>Reason_Screening_Incomplete__c</columns>
        <columns>Screening_Time__c</columns>
        <columns>Screening_Call_Origin__c</columns>
        <columns>Screening_Advocate__c</columns>
        <columns>Total_of_Children_Coming_to_Shelter__c</columns>
        <columns>Safe_Phone_Number_at_Screening__c</columns>
        <columns>Brief_History_of_DV__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Screening_Status__c</field>
            <operation>equals</operation>
            <value>To Be Completed</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Screening__c.Shelter</value>
        </filters>
        <label>Shelter - Incomplete Screenings</label>
    </listViews>
    <listViews>
        <fullName>Shelter_No_Shows</fullName>
        <columns>Screening_Status__c</columns>
        <columns>Participant__c</columns>
        <columns>Total_of_Children_Coming_to_Shelter__c</columns>
        <columns>Screening_Date__c</columns>
        <columns>Expected_Arrival_Date__c</columns>
        <columns>Caller_s_Last_Check_In__c</columns>
        <columns>Safe_Phone_Number_at_Screening__c</columns>
        <columns>Phone_Safety_Notes__c</columns>
        <columns>Safety_Plan_until_Arrival__c</columns>
        <columns>Screening_Advocate__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Screening_Status__c</field>
            <operation>equals</operation>
            <value>Accepted - No Show</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Screening__c.Shelter</value>
        </filters>
        <label>Shelter - No Shows</label>
    </listViews>
    <nameField>
        <label>Screening Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Screenings</pluralLabel>
    <recordTypes>
        <fullName>CAP</fullName>
        <active>true</active>
        <description>CAP Screening</description>
        <label>CAP</label>
    </recordTypes>
    <recordTypes>
        <fullName>Shelter</fullName>
        <active>true</active>
        <description>Shelter Screening</description>
        <label>Shelter</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Screening_Call_Origin_Required</fullName>
        <active>true</active>
        <description>Rule to enforce a value for screening call origin</description>
        <errorConditionFormula>ISPICKVAL(Screening_Call_Origin__c, &quot;&quot;)</errorConditionFormula>
        <errorMessage>Call Origin, Advocate name, Screening Status, and Screening Date must all be filled out before you can save. These fields are found in the Call Info and Status section.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Screening_Status_Required</fullName>
        <active>true</active>
        <description>Rule to enforce a value for screening status.</description>
        <errorConditionFormula>ISPICKVAL(Screening_Status__c, &quot;&quot;)</errorConditionFormula>
        <errorMessage>Screening Status, Advocate name, Screening Date, and Call Origin must all be filled out before you can save. These fields are found in the Call Info and Status section.</errorMessage>
    </validationRules>
</CustomObject>